Locally set up goals.html and changes in app.js

--- a/page_code/html/goals.html
+++ b/page_code/html/goals.html
@@ -6,7 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>This is a test page!</h1>
-    <a href="html/goals.html">Go to Goals Page</a>
+    This is the goals page!
 </body>
 </html>
