The web page was filled with basic text. Started to fill up the css

--- a/page_code/html/goals.html
+++ b/page_code/html/goals.html
@@ -3,9 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/style.css">
     <title>Document</title>
 </head>
 <body>
-    This is the goals page!
+    <header>
+        <img src="../materials/goals/header_icon.png" alt="header_icon">
+        <nav>
+            <ul class="menu">
+                <li><a href="../index.html">Home</a></li>
+                <li><a class="active" href="../html/goals.html">Goals</a></li>
+                <li><a href="../html/join.html">Join our team!</a></li>
+                <li><a href="../html/about.html">About our team</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section>
+            <article>
+                <h2>Climate action</h2>
+                <img src="../materials/goals/climate_action.png" alt="climate">
+                <p>Why we act now before it`s irreversible? </p> 
+            </article>
+            <article>
+                <h2>Quality of education</h2>
+                <img src="../materials/goals/education.png" alt="education">
+                <p>Good education - key to success. And everyone should have access to it.</p> 
+            </article>
+            <article>
+                <h2>Gender equality</h2>
+                <img src="../materials/goals/equality.png" alt="equality">
+                <p>Fairness, Respect, Equality for all </p> 
+            </article>
+        </section>
+    </main>
+    <footer>
+        <h5>Norwich council</h5>
+        <h5>United Nation goals</h5>
+        <h5>Send us an email!</h5>
+    </footer>
 </body>
 </html>
