Added more css styles. Page now is centrified. Next task is to change all the colors

--- a/page_code/html/goals.html
+++ b/page_code/html/goals.html
@@ -22,18 +22,18 @@
         <section>
             <article>
                 <h2>Climate action</h2>
-                <img src="../materials/goals/climate_action.png" alt="climate">
-                <p>Why we act now before it`s irreversible? </p> 
+                <img class="article_icon" src="../materials/goals/climate_action.png" alt="climate">
+                <p class="article_p">Why we act now before it`s irreversible? </p> 
             </article>
             <article>
                 <h2>Quality of education</h2>
-                <img src="../materials/goals/education.png" alt="education">
-                <p>Good education - key to success. And everyone should have access to it.</p> 
+                <img class="article_icon" src="../materials/goals/education.png" alt="education">
+                <p class="article_p">Good education - key to success. And everyone should have access to it.</p> 
             </article>
             <article>
                 <h2>Gender equality</h2>
-                <img src="../materials/goals/equality.png" alt="equality">
-                <p>Fairness, Respect, Equality for all </p> 
+                <img class="article_icon" src="../materials/goals/equality.png" alt="equality">
+                <p class="article_p">Fairness, Respect, Equality for all </p> 
             </article>
         </section>
     </main>
