Finished overall CSS file. Good for my page now, but if you need to make changes, feel free to do it!

--- a/page_code/html/goals.html
+++ b/page_code/html/goals.html
@@ -20,18 +20,18 @@
     </header>
     <main>
         <section>
-            <article>
-                <h2>Climate action</h2>
+            <article class="climate">
+                <h2 class="article_header">Climate action</h2>
                 <img class="article_icon" src="../materials/goals/climate_action.png" alt="climate">
                 <p class="article_p">Why we act now before it`s irreversible? </p> 
             </article>
-            <article>
-                <h2>Quality of education</h2>
+            <article class="education">
+                <h2 class="article_header">Quality of education</h2>
                 <img class="article_icon" src="../materials/goals/education.png" alt="education">
                 <p class="article_p">Good education - key to success. And everyone should have access to it.</p> 
             </article>
-            <article>
-                <h2>Gender equality</h2>
+            <article class="equality">
+                <h2 class="article_header">Gender equality</h2>
                 <img class="article_icon" src="../materials/goals/equality.png" alt="equality">
                 <p class="article_p">Fairness, Respect, Equality for all </p> 
             </article>
