--- a/page_code/html/goals.html
+++ b/page_code/html/goals.html
@@ -11,6 +11,10 @@
     <header>
         <img id="header_icon" alt="header_icon">
         <nav>
+            <input id="menu-toggle" type="checkbox" />
+            <label class='menu-button-container' for="menu-toggle">
+                <div class='menu-button'></div>
+            </label>
             <ul class="menu">
                 <li><a id="hm" a href="../index.html"></a></li>
                 <li><a id="gl" class="active" href="../html/goals.html"></a></li>
@@ -21,14 +25,9 @@
     </header>
     <main>
         <section>
-            <article class="climate">
-            </article>
-            <article class="education">
-            
-            </article>
-            <article class="equality">
-                
-            </article>
+            <article class="climate"></article>
+            <article class="education"></article>
+            <article class="equality"></article>
         </section>
     </main>
     <footer>
