Added text outline and hamburger

--- a/page_code/html/goals.html
+++ b/page_code/html/goals.html
@@ -10,17 +10,22 @@
 <body>
     <header>
         <img id="header_icon" alt="header_icon">
+        
         <nav>
-            <input id="menu-toggle" type="checkbox" />
-            <label class='menu-button-container' for="menu-toggle">
-                <div class='menu-button'></div>
-            </label>
-            <ul class="menu">
-                <li><a id="hm" a href="../index.html"></a></li>
-                <li><a id="gl" class="active" href="../html/goals.html"></a></li>
-                <li><a id="jt" href="../html/join.html"></a></li>
-                <li><a id="at" href="../html/about.html"></a></li>
-            </ul>
+            <button class="hamburger" id="hamburger">
+                <span class="hamburger-line"></span>
+                <span class="hamburger-line"></span>
+                <span class="hamburger-line"></span>
+            </button>
+
+            <div class="nav-menu" id="nav-menu">
+                <ul class="menu">
+                    <li><a id="hm" href="../index.html"></a></li>
+                    <li><a id="gl" class="active" href="../html/goals.html"></a></li>
+                    <li><a id="jt" href="../html/join.html"></a></li>
+                    <li><a id="at" href="../html/about.html"></a></li>
+                </ul>
+            </div>           
         </nav>
     </header>
     <main>
