--- a/page_code/html/aboutus.html
+++ b/page_code/html/aboutus.html
@@ -2,51 +2,31 @@
 <html lang="en">
 
 <head>
-    <title>About us</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style_aboutus.css">
     <script src="../js/aboutus.js" defer></script>
+    <title> About us</title>
 </head>
 
 <body>
     <header>
-        <img src="../materials/goals/header_icon.png" alt="header_icon">
+        <img id="header_icon" alt="header_icon">
         <nav>
             <ul class="menu">
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="../html/goals.html">Goals</a></li>
-                <li><a href="../html/join.html">Join our team!</a></li>
-                <li><a class="active" href="../html/aboutus.html">About our team</a></li>
+                <li><a id="hm" a href="../index.html"></a></li>
+                <li><a id="gl" a href="../html/goals.html"></a></li>
+                <li><a id="jt" href="../html/join.html"></a></li>
+                <li><a id="at" class="active" a href="../html/aboutus.html"></a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <article class="lb_article">
-            <figure>
-                <h3 class="lside"></h3>
-                <p></p>
-            </figure>
-        </article>
-        <article class="y_article">
-            <figure>
-                <h3 class="lside"></h3>
-                <p></p>
-            </figure>
-        </article>
-        <article class="b_article">
-            <figure>
-                <h3 class="lside"></h3>
-                <p>this works</p>
-            </figure>
-        </article>
-        <article class="ln_article">
-            <h3 class="lside"></h3>
-            <p></p>
-        </article>
     </main>
     <footer>
-        <h5>Norwich Council</h5>
-        <h5>United Nation Goals</h5>
-        <h5>Send us an Email!</h5>
+        <h5><a id="nc"></a></h5>
+        <h5><a id="un"></a></h5>
+        <h5><a id="em"></a></h5>
     </footer>
 </body>
 
