--- a/page_code/html/aboutus.html
+++ b/page_code/html/aboutus.html
@@ -13,12 +13,20 @@
     <header>
         <img id="header_icon" alt="header_icon">
         <nav>
-            <ul class="menu">
-                <li><a id="hm" a href="../index.html"></a></li>
-                <li><a id="gl" a href="../html/goals.html"></a></li>
-                <li><a id="jt" href="../html/join.html"></a></li>
-                <li><a id="at" class="active" a href="../html/aboutus.html"></a></li>
-            </ul>
+            <button class="hamburger" id="hamburger">
+                <span class="hamburger-line"></span>
+                <span class="hamburger-line"></span>
+                <span class="hamburger-line"></span>
+            </button>
+
+            <div class="nav-menu" id="nav-menu">
+                <ul class="menu">
+                    <li><a id="hm" href="../index.html"></a></li>
+                    <li><a id="gl" href="../html/goals.html"></a></li>
+                    <li><a id="jt" href="../html/join.html"></a></li>
+                    <li><a id="at" class="active" href="../html/aboutus.html"></a></li>
+                </ul>
+            </div>           
         </nav>
     </header>
     <main>
