--- a/page_code/html/aboutus.html
+++ b/page_code/html/aboutus.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/style_aboutus.css">
+    <link rel="stylesheet" href="../css/style.css">
     <script src="../js/aboutus.js" defer></script>
     <title> About us</title>
 </head>
