--- a/page_code/html/form.html
+++ b/page_code/html/form.html
@@ -3,7 +3,7 @@
         <meta charset="UTF -8">
         <meta name=" author" content="Intisar Adekanmbi">
         <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" type="text/css" href="../css/style.css">
+        <link rel="stylesheet" type="text/css" href="../css/style_form.css">
         <title id="page-title"></title>
         <script src="../js/content.js"></script>
         <script src="../js/form.js"></script>
