--- a/page_code/html/goals.html
+++ b/page_code/html/goals.html
@@ -22,7 +22,7 @@
                 <ul class="menu">
                     <li><a id="hm" href="../index.html"></a></li>
                     <li><a id="gl" class="active" href="../html/goals.html"></a></li>
-                    <li><a id="jt" href="../html/join.html"></a></li>
+                    <li><a id="jt" href="../html/form.html"></a></li>
                     <li><a id="at" href="../html/about.html"></a></li>
                 </ul>
             </div>           
