--- a/page_code/html/form.html
+++ b/page_code/html/form.html
@@ -25,7 +25,7 @@
                         <li><a id="hm" href="../index.html"></a></li>
                         <li><a id="gl" href="../html/goals.html"></a></li>
                         <li><a id="jt" class="active" href="../html/form.html"></a></li>
-                        <li><a id="at" href="../html/about.html"></a></li>
+                        <li><a id="at" href="../html/aboutus.html"></a></li>
                     </ul>
                 </div>           
             </nav>
