--- a/page_code/html/goal-gender-equality.html
+++ b/page_code/html/goal-gender-equality.html
@@ -5,7 +5,8 @@
     <meta charset="UTF -8">
     <meta name=" author" content="Intisar Adekanmbi">
     <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="form.css">
+    <link rel="stylesheet" type="text/css" href="../css/form.css">
+    <script src="../js/equalityGoals.js" defer></script>
     <title> Gender Equality </title>
 </head>
 
