--- a/page_code/html/goals.html
+++ b/page_code/html/goals.html
@@ -23,7 +23,7 @@
                     <li><a id="hm" href="../index.html"></a></li>
                     <li><a id="gl" class="active" href="../html/goals.html"></a></li>
                     <li><a id="jt" href="../html/form.html"></a></li>
-                    <li><a id="at" href="../html/about.html"></a></li>
+                    <li><a id="at" href="../html/aboutus.html"></a></li>
                 </ul>
             </div>           
         </nav>
